--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,14 @@
   "files.associations": {
     "stdio.h": "c",
     "intercalacaobasico.h": "c",
-    "stdarg.h": "c"
+    "stdarg.h": "c",
+    "string.h": "c",
+    "time.h": "c",
+    "stdlib.h": "c",
+    "product.h": "c",
+    "order.h": "c",
+    "userutils.h": "c",
+    "classificacaointerna.h": "c",
+    "fileutils.h": "c"
   }
 }
